<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Introduction</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="cero_app">Cero App</string>
    <string name="do_you_want">Do you want to reduce your carbon footprint? We will help you with it!</string>
    <string name="skip">SKIP</string>
    <string name="next">Next</string>

    <!-- page2 -->
    <string name="calculate_e">Calculate Easily</string>
    <string name="your_cars_c">Your cars` carbon footprint with \ntrustful data from ADAC.</string>

    <!-- page3-->
    <string name="set_your_go">Set your goal</string>
    <string name="we_will_sho">We will show you your emissions compared to the average.\nYou can choose individually how much you would like to reduce.</string>

    <!-- page4 -->
    <string name="get_rewarde">Get rewarded</string>
    <string name="if_you_achi">If you achieve your personal goal you \ncan coose between attractive \neco-friendly rewards.</string>

    <!-- calc frag1 -->

    <string name="button01">Button 01</string>
    <string name="pop01">Pop 01</string>
    <string name="button02">Button 02</string>
    <string name="pop02">Pop 02</string>

    <string name="let_s_get_t">Let us get to know you</string>
    <string name="in_order_to">In order to calculate your carbon footprint, we need to know which car you drive.</string>
    <string name="brand">Brand</string>
    <string name="car_model">Car Model</string>
    <string name="label_next">Next</string>
    <string name="skip_for_now" tools:ignore="DuplicateDefinition">Skip for now</string>


    <!-- calc frag2 -->
    <string name="journey_tim">Journey \ntime</string>
    <string name="how_many_ki">How many kilometers do you \naproximately drive per year?</string>


</resources>
