<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sample1Fragment">

        <!-- Welcome to -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_to"
            android:layout_width="95dp"
            android:layout_height="24dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="158dp"
            android:layout_marginTop="438dp"
            android:fontFamily="@font/open_sans_light"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="5sp"
            android:text="@string/welcome_to"
            android:textAppearance="@style/welcome_to"
            android:translationY="-2.47sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!-- Slider Intro -->
            <View
                android:id="@+id/slider_intr"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="#00000000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">
            <!-- SKIP -->
            <TextView
                android:id="@+id/skip"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:gravity="center_horizontal|top"
                android:lineSpacingExtra="0sp"
                android:text="@string/skip"
                android:textAppearance="@style/skip" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <!-- Cero App -->
        <TextView
            android:id="@+id/cero_app"
            android:layout_width="291dp"
            android:layout_height="102dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="438dp"
            android:fontFamily="@font/playfair_display"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="16sp"
            android:text="@string/cero_app"
            android:textAppearance="@style/cero_app"
            android:translationY="-8.01sp"
            android:alpha="0.1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <!-- Do you want to reduce your carbon footprint? We will help you with it! -->
        <TextView
            android:id="@+id/do_you_want"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="79dp"
            android:layout_marginTop="564dp"
            android:fontFamily="@font/open_sans_light"
            android:gravity="center_horizontal|top"
            android:lineSpacingExtra="1sp"
            android:text="@string/do_you_want"
            android:textAppearance="@style/do_you_want"
            android:translationY="-0.47sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:background="#ffffff"
            android:
            android:text="Skip" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>